--- a/FinPlan.Web/Pages/CostOfLivingPlanner.razor
+++ b/FinPlan.Web/Pages/CostOfLivingPlanner.razor
@@ -226,17 +226,17 @@
 
 <nav class="left-sidebar" aria-label="Left menu">
     <ul class="list-unstyled mb-0">
-        <li><a class="sidebar-link" href="#" @onclick="ToggleCollapseAllCategories"><i class="bi bi-list"></i> Collapse/Expand</a></li>
-        <li><a class="sidebar-link" href="#" @onclick="OpenAddCategoryModal"><i class="bi bi-plus-circle"></i> Add Category</a></li>
+        @* <li><a class="sidebar-link" href="#" @onclick="ToggleCollapseAllCategories"><i class="bi bi-list"></i> Collapse/Expand</a></li>
+        <li><a class="sidebar-link" href="#" @onclick="OpenAddCategoryModal"><i class="bi bi-plus-circle"></i> Add Category</a></li> *@
         <li><a class="sidebar-link" href="/"><i class="bi bi-house"></i> Home</a></li>
     </ul>
 </nav>
 
 <nav class="right-sidebar" aria-label="Right menu">
     <ul class="list-unstyled mb-0">
-        <li><a class="sidebar-link" href="/retirement-fire"><i class="bi bi-wallet2"></i> Retirement</a></li>
+        @* <li><a class="sidebar-link" href="/retirement-fire"><i class="bi bi-wallet2"></i> Retirement</a></li>
         <li><a class="sidebar-link" href="/wealth-journey"><i class="bi bi-graph-up"></i> Wealth Journey</a></li>
-        <li><a class="sidebar-link" href="/privacy-policy"><i class="bi bi-file-earmark-text"></i> Privacy</a></li>
+        <li><a class="sidebar-link" href="/privacy-policy"><i class="bi bi-file-earmark-text"></i> Privacy</a></li> *@
     </ul>
 </nav>
 
