added how to guides

--- a/FinPlan.Web/Components/Pages/DrawDownRetirementPlanner.razor
+++ b/FinPlan.Web/Components/Pages/DrawDownRetirementPlanner.razor
@@ -829,6 +829,8 @@
     <nav class="left-sidebar" aria-label="Left menu">
         <ul class="list-unstyled mb-0">
             <li><a class="sidebar-link" href="/"><i class="bi bi-house"></i> Home</a></li>
+            <li><a class="sidebar-link" href="/guides/how-to-use-drawdown-calculator"><i class="bi bi-house"></i>How to</a></li>
+            
 
             @* <li><a class="sidebar-link" href="/retirement-fire"><i class="bi bi-calculator"></i> Planner</a></li>
             <li><a class="sidebar-link" href="#results"><i class="bi bi-graph-up"></i> Results</a></li>
