--- a/FinPlan.Web/Components/Pages/WealthJourmeyPlanner.razor
+++ b/FinPlan.Web/Components/Pages/WealthJourmeyPlanner.razor
@@ -165,6 +165,8 @@
 <nav class="left-sidebar" aria-label="Left menu">
     <ul class="list-unstyled mb-0">
         <li><a class="sidebar-link" href="/"><i class="bi bi-house"></i> Home</a></li>
+        <li><a class="sidebar-link" href="/guides/how-to-use-wealth-journey-calculator"><i class="bi bi-house"></i>How to</a></li>
+
         @* <li><a class="sidebar-link" href="/wealth-journey"><i class="bi bi-graph-up-arrow"></i> Planner</a></li>
         <li><a class="sidebar-link" href="#results"><i class="bi bi-graph-up"></i> Results</a></li>
         <li><a class="sidebar-link" href="#export"><i class="bi bi-file-earmark-excel"></i> Export</a></li>
