--- a/FinPlan.Web/Components/Pages/WealthJourmeyPlanner.razor
+++ b/FinPlan.Web/Components/Pages/WealthJourmeyPlanner.razor
@@ -16,7 +16,7 @@
 @inject FinPlan.Web.Services.DebugMessageService DebugService
 @inject FinPlan.Web.Services.UserGuidService UserGuidService
 
-<PageTitle>REWealthen - Wealth Journey Planner</PageTitle>
+<PageTitle>REWealth-en - Wealth Building Planner</PageTitle>
 
 <!-- Styles moved to WealthJourmeyPlanner.razor.css -->
 
